fix id on berries

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         </div>
         
         <div class="card-deck">
-            <div class="card" id="option fruit-choice">
+            <div class="card" id="option">
                 <img src="https://i.picsum.photos/id/1080/6858/4574.jpg?hmac=qMYBjROs2Wu589QQXRAYsxDJu4ZuRQ4PKDpb3x_Oouw"
                     class="card-img-top" alt="berries">
                 <div class="card-body">
