--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
                     class="card-img-top" alt="breakfast">
 
                 <div class="card-body">
-                    <button type="button card-title" class="btn btn-outline-info choiceBtn choiceMeal"> Breakfast </button>
+                    <button name="breakfast" type="button card-title" class="btn btn-outline-info choiceBtn choiceMeal">
+                        Breakfast </button>
                 </div>
             </div>
 
@@ -84,7 +85,8 @@
                 <img src="https://media.istockphoto.com/photos/sandwich-bread-tomato-lettuce-and-yellow-cheese-picture-id510482834?k=20&m=510482834&s=612x612&w=0&h=xMas2pRw5kZnPZhBvNCkvyEW3m-wn1u25eDkDJWCKjU="
                     class="card-img-top" alt="lunch">
                 <div class="card-body">
-                    <button type="button card-title" class="btn btn-outline-info choiceBtn choiceMeal"> Lunch </button>
+                    <button name="lunch" type="button card-title" class="btn btn-outline-info choiceBtn choiceMeal">
+                        Lunch </button>
                 </div>
             </div>
 
@@ -92,7 +94,8 @@
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNHWSiXCHflVx_DnqDBuzi7Kq8kkYD3YNy0TQeP2r6NVhYsq_IKdT0mJaUkfChfW5Rt-0&usqp=CAU"
                     class="card-img-top" alt="dinner">
                 <div class="card-body">
-                    <button type="button card-title" class="btn btn-outline-info choiceBtn choiceMeal"> Dinner </button>
+                    <button name="dinner" type="button card-title" class="btn btn-outline-info choiceBtn choiceMeal">
+                        Dinner </button>
                 </div>
             </div>
         </div>
@@ -147,7 +150,8 @@
                 <img src="https://i.pinimg.com/originals/7b/46/9d/7b469daf804e7596950fd5a74de79d92.png"
                     class="card-img-top" alt="beef">
                 <div class="card-body">
-                    <button type="button card-title" id="protein-choice-1" class="btn btn-outline-info choiceBtn choiceProtein"> Beef </button>
+                    <button type="button card-title" id="protein-choice-1"
+                        class="btn btn-outline-info choiceBtn choiceProtein"> Beef </button>
                 </div>
             </div>
 
@@ -155,7 +159,8 @@
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiRGBDvsDlw4dHYjkbcyASXObCBQkZljTd9bhyiF6eqVR3KFsF3sa8OTI1FAlugXm-YV8&usqp=CAU"
                     class="card-img-top" alt="poultry">
                 <div class="card-body">
-                    <button type="button card-title" id="protein-choice-2" class="btn btn-outline-info choiceBtn choiceProtein"> Poultry </button>
+                    <button type="button card-title" id="protein-choice-2"
+                        class="btn btn-outline-info choiceBtn choiceProtein"> Poultry </button>
                 </div>
             </div>
 
@@ -163,7 +168,8 @@
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTRoVVgCdq4smQy9D0pzWtuhuLBMGfkG0ItiQ&usqp=CAU"
                     class="card-img-top" alt="fish">
                 <div class="card-body">
-                    <button type="button card-title" id="protein-choice-3" class="btn btn-outline-info choiceBtn choiceProtein"> Fish </button>
+                    <button type="button card-title" id="protein-choice-3"
+                        class="btn btn-outline-info choiceBtn choiceProtein"> Fish </button>
                 </div>
             </div>
 
@@ -171,7 +177,8 @@
                 <img src="https://media.istockphoto.com/photos/roasted-pork-tenderloin-picture-id184997093?k=20&m=184997093&s=612x612&w=0&h=BGPBoXK0oXU2vxi_nNnWmIbPKhaTcR4PTWmi3tkNfU8="
                     class="card-img-top" alt="pork">
                 <div class="card-body">
-                    <button type="button card-title" id="protein-choice-4" class="btn btn-outline-info choiceBtn choiceProtein"> Pork </button>
+                    <button type="button card-title" id="protein-choice-4"
+                        class="btn btn-outline-info choiceBtn choiceProtein"> Pork </button>
                 </div>
             </div>
         </div>
@@ -187,7 +194,8 @@
                     class="card-img-top" alt="tomatoes">
 
                 <div class="card-body">
-                    <button type="button card-title" id="veg-choice-1" class="btn btn-outline-info choiceBtn choiceVeg"> Tomatoes </button>
+                    <button type="button card-title" id="veg-choice-1" class="btn btn-outline-info choiceBtn choiceVeg">
+                        Tomatoes </button>
                 </div>
             </div>
 
@@ -195,7 +203,8 @@
                 <img src="https://i.picsum.photos/id/292/3852/2556.jpg?hmac=cPYEh0I48Xpek2DPFLxTBhlZnKVhQCJsbprR-Awl9lo"
                     class="card-img-top" alt="onions">
                 <div class="card-body">
-                    <button type="button card-title" id="veg-choice-2" class="btn btn-outline-info choiceBtn choiceVeg"> Onions </button>
+                    <button type="button card-title" id="veg-choice-2" class="btn btn-outline-info choiceBtn choiceVeg">
+                        Onions </button>
                 </div>
             </div>
 
@@ -203,7 +212,8 @@
                 <img src="https://media.istockphoto.com/photos/green-lettuce-leaves-picture-id588593818?b=1&k=20&m=588593818&s=170667a&w=0&h=RpKLqPytfvlnBilDGnpY26XiqD1hdTvvP3LD1jH7OoA="
                     class="card-img-top" alt="lettuce">
                 <div class="card-body">
-                    <button type="button card-title" id="veg-choice-3" class="btn btn-outline-info choiceBtn choiceVeg"> Lettuce </button>
+                    <button type="button card-title" id="veg-choice-3" class="btn btn-outline-info choiceBtn choiceVeg">
+                        Lettuce </button>
                 </div>
 
             </div>
@@ -212,7 +222,8 @@
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTt88GdZxpIYTYvtjO2UvTyP-wYmsN5nQft8A&usqp=CAU"
                     class="card-img-top" alt="carrots">
                 <div class="card-body">
-                    <button type="button card-title" id="veg-choice-4" class="btn btn-outline-info choiceBtn choiceVeg"> Carrots </button>
+                    <button type="button card-title" id="veg-choice-4" class="btn btn-outline-info choiceBtn choiceVeg">
+                        Carrots </button>
                 </div>
             </div>
         </div>
@@ -222,20 +233,22 @@
                 <h3>Fruit</h3>
             </div>
         </div>
-        
+
         <div class="card-deck">
             <div class="card" id="option">
                 <img src="https://i.picsum.photos/id/1080/6858/4574.jpg?hmac=qMYBjROs2Wu589QQXRAYsxDJu4ZuRQ4PKDpb3x_Oouw"
                     class="card-img-top" alt="berries">
                 <div class="card-body">
-                    <button type="button card-title" id="fruit-choice-1" class="btn btn-outline-info choiceBtn choiceFruit"> Berries </button>
+                    <button type="button card-title" id="fruit-choice-1"
+                        class="btn btn-outline-info choiceBtn choiceFruit"> Berries </button>
                 </div>
             </div>
             <div class="card" id="option">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT7wTZGj2WP9NAi1v7NHU72JeaQ9gpVPHYx4w&usqp=CAU"
                     class="card-img-top" alt="apples">
                 <div class="card-body">
-                    <button type="button card-title" id="fruit-choice-2" class="btn btn-outline-info choiceBtn choiceFruit"> Apples </button>
+                    <button type="button card-title" id="fruit-choice-2"
+                        class="btn btn-outline-info choiceBtn choiceFruit"> Apples </button>
                 </div>
             </div>
 
@@ -243,7 +256,8 @@
                 <img src="https://www.kindpng.com/picc/m/111-1113758_banana-fruit-hd-png-download.png"
                     class="card-img-top" alt="bananas">
                 <div class="card-body">
-                    <button type="button card-title" id="fruit-choice-3" class="btn btn-outline-info choiceBtn choiceFruit"> Bananas </button>
+                    <button type="button card-title" id="fruit-choice-3"
+                        class="btn btn-outline-info choiceBtn choiceFruit"> Bananas </button>
                 </div>
             </div>
 
@@ -251,7 +265,8 @@
                 <img src="https://media.istockphoto.com/photos/citrus-fresh-fruits-picture-id119605884?k=20&m=119605884&s=612x612&w=0&h=Ilmuv2VxU8iQa7SmUNxLOeEjW-5y3DFQPqMPm1hAFz4="
                     class="card-img-top" alt="citrus">
                 <div class="card-body">
-                    <button type="button card-title" id="fruit-choice-4" class="btn btn-outline-info choiceBtn choiceFruit"> Citrus </button>
+                    <button type="button card-title" id="fruit-choice-4"
+                        class="btn btn-outline-info choiceBtn choiceFruit"> Citrus </button>
                 </div>
             </div>
         </div>
@@ -266,7 +281,8 @@
                 <img src="https://thumbs.dreamstime.com/b/various-seeds-grains-nuts-old-table-bowls-top-view-various-seeds-grains-nuts-old-table-healthy-diverse-diet-130539851.jpg"
                     class="card-img-top" alt="grains">
                 <div class="card-body">
-                    <button type="button card-title" id="starch-choice-1" class="btn btn-outline-info choiceBtn choiceStarch"> Grains </button>
+                    <button type="button card-title" id="starch-choice-1"
+                        class="btn btn-outline-info choiceBtn choiceStarch"> Grains </button>
                 </div>
             </div>
 
@@ -274,7 +290,8 @@
                 <img src="https://media.istockphoto.com/photos/homemade-italian-fettuccine-pasta-with-mushrooms-and-cream-sauce-picture-id1161197982?b=1&k=20&m=1161197982&s=170667a&w=0&h=hYkoZW7iMGj7mjMzpCWmLNSWfrtDWSJd38hCKXQgUHc="
                     class="card-img-top" alt="pasta">
                 <div class="card-body">
-                    <button type="button card-title" id="starch-choice-2" class="btn btn-outline-info choiceBtn choiceStarch"> Pasta </button>
+                    <button type="button card-title" id="starch-choice-2"
+                        class="btn btn-outline-info choiceBtn choiceStarch"> Pasta </button>
                 </div>
             </div>
 
@@ -282,7 +299,8 @@
                 <img src="https://media.istockphoto.com/photos/fresh-potatoes-in-sack-on-wooden-table-picture-id698717842?k=20&m=698717842&s=612x612&w=0&h=xPsdMLdB6Iq9eLhh3QabWbJAZ-fmFcNciHVlnrigRTk="
                     class="card-img-top" alt="potatoes">
                 <div class="card-body">
-                    <button type="button card-title" id="starch-choice-3" class="btn btn-outline-info choiceBtn choiceStarch"> Potatoes / Tubers 
+                    <button type="button card-title" id="starch-choice-3"
+                        class="btn btn-outline-info choiceBtn choiceStarch"> Potatoes / Tubers
                     </button>
                 </div>
             </div>
@@ -291,7 +309,8 @@
                 <img src="https://media.istockphoto.com/photos/still-life-with-breads-and-wheats-picture-id1129408124?k=20&m=1129408124&s=612x612&w=0&h=aufQe2TRsjCeqcscNv-dyXaZE6hTT_Zb2Jtw3nRMon4="
                     class="card-img-top" alt="bread">
                 <div class="card-body">
-                    <button type="button card-title" id="starch-choice-4" class="btn btn-outline-info choiceBtn choiceStarch"> Bread </button>
+                    <button type="button card-title" id="starch-choice-4"
+                        class="btn btn-outline-info choiceBtn choiceStarch"> Bread </button>
                 </div>
             </div>
         </div>
