added an array of objects

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                     class="card-img-top" alt="potatoes">
                 <div class="card-body">
                     <button type="button card-title" id="starch-choice-3"
-                        class="btn btn-outline-info choiceBtn choiceStarch"> Potatoes / Tubers
+                        class="btn btn-outline-info choiceBtn choiceStarch"> Potatoes
                     </button>
                 </div>
             </div>
