--- a/index.html
+++ b/index.html
@@ -325,7 +325,11 @@
 
     </main>
 
+    <section>
+        <div id="search-results">
 
+        </div>
+    </section>
 
     <script src="./assets/script.js"></script>
 
