--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </header>
 
-    <nav class="navbar navbar-expand-lg bg-light">
+    <!-- <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -55,12 +55,12 @@
                         <a class="nav-link disabled"></a>
                     </li>
                 </ul> -->
-                    <!-- <form class="d-flex" role="search">
+    <!-- <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form> -->
-            </div>
-        </div>
+    </div>
+    </div>
     </nav>
 
     <main>
